objects/Channel_Qualifications__c.object
<CustomObject>
    <description>R5-New custom object created for Release 5 to track to rate the Potential partner based on the criteria.</description>
    <fields>
        <fullName>ABB_Business_Potential1__c</fullName>
        <description>R6: To move the ABB business potential from Channel Partner Market Scope to Qualification</description>
        <inlineHelpText>The potential annual ABB sales volume, within 2-3 years of partnership, relevant to this Market Scope.</inlineHelpText>
        <label>ABB Business Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ABB_Business_Potential__c</fullName>
        <description>R5 - ABB Business Potential from Channel Market Coverage.</description>
        <formula>Channel_Market_Coverage__r.ABB_Business_Potential__c</formula>
        <label>ABB Business Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ABB_Product_Lines__c</fullName>
        <description>R5 - ABB Product Lines</description>
        <inlineHelpText>Shows value as defined in Market Scope, where possible updates need to be done.</inlineHelpText>
        <label>Product Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ABB_Product_Lines_discussed__c</fullName>
        <description>R5 - Values are copied from Channel Market Scope using Trigger.</description>
        <label>ABB Product Lines discussed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>SFDC-4190 - Account GUID</description>
        <formula>Account__r.GUID__c</formula>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship between Account and Channel Qualification</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Channel_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attitude_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - Attitude to partnership section</description>
        <inlineHelpText>Attitude and commitment.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attitude_Answer_2__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 2 - Attitude to partnership section</description>
        <inlineHelpText>Attitude in discussions and progress scheduling.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attitude_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((Attitude_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attitude_Notes__c</fullName>
        <description>R5 - Notes under Attitude to Partnership Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attitude_Question_1__c</fullName>
        <defaultValue>$Label.Attitude_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 2- Attitude to partnership section</description>
        <inlineHelpText>Attitude and commitment</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attitude_Question_2__c</fullName>
        <defaultValue>$Label.Attitude_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 3- Attitude to partnership section</description>
        <inlineHelpText>Attitude in discussions and progress scheduling.</inlineHelpText>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attitude_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 Attitude Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>Attitude Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attitude_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for Attitude value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
 ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)), &quot;Must have&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attitude_Value_2__c</fullName>
        <description>R5 - Formula field to populate the value for Attitude value 2</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;)), &quot;5&quot;, IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), &quot;4&quot;, &quot;&quot;) )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average__c</fullName>
        <description>R5 Average value of all the scores</description>
        <formula>(General_Score__c  +  Market_Score__c  +  Portfolio_Score__c  +  Organization_Score__c  +  Attitude_Score__c  +  Business_Score__c) / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weighted average of all rates given</inlineHelpText>
        <label>Total Weight Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - Business Planning section</description>
        <inlineHelpText>Attitude and commitment.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BP_Answer_2__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 2 - Business Planning section</description>
        <inlineHelpText>Other suppliers and own books.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BP_Answer_3__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 3 - Business Planning section</description>
        <inlineHelpText>Impression based on discussion, reference how the channel has on boarded product lines earlier.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BP_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((BP_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Flag_2__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((BP_Value_2__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Flag_4__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((BP_Value_4__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Notes__c</fullName>
        <description>R5 - Notes under Business Planning Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BP_Question_1__c</fullName>
        <defaultValue>$Label.Business_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Business Planning section</description>
        <inlineHelpText>Attitude and commitment</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BP_Question_2__c</fullName>
        <defaultValue>$Label.Business_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Business Planning section</description>
        <inlineHelpText>Other suppliers and own books.</inlineHelpText>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BP_Question_3__c</fullName>
        <defaultValue>$Label.Business_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Business Planning section</description>
        <inlineHelpText>Impression based on discussion, reference how the channel has on boarded product lines earlier</inlineHelpText>
        <label>Question 3</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BP_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for Business value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
 ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;)), &quot;Must have&quot;, IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), &quot;2&quot;, &quot;&quot;))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Value_2__c</fullName>
        <description>R5 - Formula field to populate the value for Business Value 2</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;)), &quot;Must have&quot;, IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), &quot;2&quot;, &quot;&quot;))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Value_3__c</fullName>
        <description>R5 - Formula field to populate the value for Business value 3</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;)),&quot;0&quot;, IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;)), &quot;4&quot;, IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)),&quot;2&quot;, &quot;&quot;)))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 Business Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>Business Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Market_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Channel Market Coverage</description>
        <inlineHelpText>Channel Market Scope this pre-qualification is connected to</inlineHelpText>
        <label>Market Scope</label>
        <referenceTo>Channel_Market_Coverage__c</referenceTo>
        <relationshipLabel>Channel Partner Pre-Qualifications</relationshipLabel>
        <relationshipName>Channel_Pre_Qualification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Qualification_Status__c</fullName>
        <description>R5 Channel Qualification Status</description>
        <formula>IF((Average__c)&lt;4,IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;),IF((Average__c)=4, IMAGE(&quot;/img/samples/light_yellow.gif&quot;,&quot;Yellow&quot;),IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct_Flag__c</fullName>
        <description>R5 - Display Flag when Code of Conduct is unchecked.</description>
        <formula>IF( Code_of_Conduct__c == FALSE, IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct__c</fullName>
        <description>R5 - Code of Conduct</description>
        <formula>Account__r.Code_of_Conduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows value as defined in Account -template.  Show stopper topic; update in Account -template, section &quot;Channel Common Data&quot; as needed.</inlineHelpText>
        <label>Code of Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>R5 - Company Description</description>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Base__c</fullName>
        <description>R5 - Values are copied from Channel Market Scope using Trigger.</description>
        <label>Customer Base</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Completed__c</fullName>
        <description>R5 - Date of Completed</description>
        <inlineHelpText>Defaults to date when status changed to completed or declined. Can be manually changed</inlineHelpText>
        <label>Date of Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>R5 - Date of Completion when the Status is changed to Completed.</description>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 - Division</description>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - General section</description>
        <inlineHelpText>Internal company bookkeeping , credit check and info from other suppliers. (1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Answer_2__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 2 - General section</description>
        <inlineHelpText>Positive growth history with at least 2 years, official reports, and info from other suppliers.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Answer_3__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 3 - General section</description>
        <inlineHelpText>Official documentation.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>R5 - General Comments</description>
        <inlineHelpText>Summary of  the validation visit. Concludes overall impression.</inlineHelpText>
        <label>Comments and overall impression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((General_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag_2__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((General_Value_2__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag_3__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((General_Value_3__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <description>R5 - Notes under General Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_1__c</fullName>
        <defaultValue>$Label.General_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- General section</description>
        <inlineHelpText>Internal company bookkeeping , credit check and info from other suppliers</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_2__c</fullName>
        <defaultValue>$Label.General_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- General section</description>
        <inlineHelpText>Positive growth history with at least 2 years, official reports, and info from other suppliers</inlineHelpText>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_3__c</fullName>
        <defaultValue>$Label.General_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- General section</description>
        <inlineHelpText>Official documentation</inlineHelpText>
        <label>Question 3</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 General Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>General Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for General value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;)
), &quot;Must have&quot;, IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), &quot;4&quot;, &quot;&quot; ))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Value_2__c</fullName>
        <description>R5 - Formula field to populate the value for General value 2</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;)),  &quot;Must have&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Value_3__c</fullName>
        <description>R5 - Formula field to populate the value for General value 3</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Distributor (DIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;)), &quot;Must have&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Channel_Qual_Doc__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=ChannelQualification&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Channel Qual Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industries_focused__c</fullName>
        <description>R5 - Values are copied from Channel Market Scope using Trigger.</description>
        <label>Industries focussed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>